backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cherry-go-backend 
  labels:
    app: cherry-go-backend
spec:
  selector: 
    matchLabels:
      app: cherry-go-backend 
  replicas: 2
  template:
    metadata:
      labels:
        app: cherry-go-backend 
    spec:
      containers:
        - name: cherry-go-backend
          image: "andersonfrfilho/cherry-go_api_backend:1.0.0"
          resources:
            requests: 
              cpu: "200m"
              memory: 200Mi
            limits: 
              cpu: 500m
              memory: 400Mi 
          startupProbe: 
            httpGet:
              path: '/healthcheck'
              port: 3333 
            periodSeconds: 3 
            failureThreshold: 30 
          readinessProbe: 
            httpGet:
              path: '/healthcheck'
              port: 3333 
            periodSeconds: 3 
            failureThreshold: 1 
          livenessProbe:
            httpGet: 
              path: '/healthcheck'
              port: 3333 
            periodSeconds: 5 
            failureThreshold: 1 
            timeoutSeconds: 1 
            successThreshold: 1 
      imagePullSecrets:
      - name: regcred
