backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cherry-go-backend-service
spec:
  selector: 
    app: cherry-go-backend
  type: LoadBalancer 
  ports:
  - name:  cherry-go-backend-service
    port: 80 
    targetPort: 3333 
    protocol: TCP
